--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Portfolio - Dennykd</title>
   </head>
-  <body class="font-lato">
+  <body id="home" class="font-lato">
     <section class="fixed z-50 w-full top-0">
       <nav class="bg-white drop-shadow-xl">
         <div class="max-w-7xl mx-auto px-4 py-3">
@@ -44,11 +44,11 @@
         </div>
         <!-- mobile menu -->
         <div class="hidden mobile-menu">
-          <ul class="">
-            <li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-primary font-semibold">Home</a></li>
-            <li><a href="#services" class="block text-sm px-2 py-4 hover:bg-primary transition duration-300">About</a></li>
-            <li><a href="#about" class="block text-sm px-2 py-4 hover:bg-primary transition duration-300">Projects</a></li>
-            <li><a href="#contact" class="block text-sm px-2 py-4 hover:bg-primary transition duration-300">Contact</a></li>
+          <ul class="mx-5">
+            <li><a href="index.html" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Home</a></li>
+            <li><a href="#about" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">About</a></li>
+            <li><a href="#projects" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Projects</a></li>
+            <li><a href="#contact" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Contact</a></li>
           </ul>
         </div>
         <script>
