--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     />
     <title>Portfolio - Dennykd</title>
   </head>
-  <body id="home" class="font-lato">
+  <body class="font-lato">
     <section class="fixed z-50 w-full top-0">
       <nav class="bg-white drop-shadow-xl">
-        <div class="max-w-7xl mx-auto px-4 py-3">
+        <div class="max-w-7xl mx-auto px-4 py-1">
           <div class="flex justify-between">
             <div>
               <!-- Website Logo -->
               <a href="#" class="flex items-center py-4 px-2">
-                <span class="font-semibold text-dark text-4xl">Dennykd</span>
+                <span class="font-semibold text-dark text-2xl lg:text-4xl">Portfolio</span>
               </a>
             </div>
             <!-- Primary Navbar items -->
@@ -45,7 +45,7 @@
         <!-- mobile menu -->
         <div class="hidden mobile-menu">
           <ul class="mx-5">
-            <li><a href="index.html" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Home</a></li>
+            <li><a href="#home" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Home</a></li>
             <li><a href="#about" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">About</a></li>
             <li><a href="#projects" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Projects</a></li>
             <li><a href="#contact" class="block text-sm px-2 py-4 hover:bg-primary font-semibold transition duration-300">Contact</a></li>
@@ -63,11 +63,11 @@
     </section>
     
     <!-- Hero Section Start -->
-    <section id="home" class="mt-40">
+    <section id="home" class="pt-40">
       <div class="lg:px-32 container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hello, I am<span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Kadek Denny</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hello 👋, I am<span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Kadek Denny</span></h1>
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student of <span class="text-dark">Bali State Polytechnic</span></h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, accusamus ipsa fugiat quis repellendus cum animi voluptatem porro! Nam odio maiores voluptas nulla, ea distinctio.
@@ -99,7 +99,7 @@
         <div class="flex flex-wrap items-center">
           <div class="w-full px-4 lg:w-1/2">
             <div class="flex">
-              <h4 class="font-bold uppercase text-primary text-lg mb-3 border-b-2 border-primary pb-1 ">About Me</h4>   
+              <h4 class="font-bold uppercase text-primary text-lg lg:text-xl mb-3 border-b-2 border-primary pb-1 ">About Me</h4>   
             </div>
             <h2 class="font-bold text-white text-3xl mb-5 max-w-md lg:text-4xl">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
@@ -125,7 +125,7 @@
     <section id="projects" class="pt-32">
       <div class="container lg:px-32">
         <div class="flex justify-start px-4">
-          <h2 class="font-bold uppercase text-primary text-lg mb-5 border-b-2 border-primary pb-1">Latest Projects</h2>
+          <h2 class="font-bold uppercase text-primary text-lg lg:text-xl mb-5 border-b-2 border-primary pb-1">Latest Projects</h2>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 px-4 gap-8">
           <div class="flex flex-wrap bg-white rounded-lg drop-shadow-lg group hover:bg-dark">
@@ -134,7 +134,7 @@
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 1</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
               <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
               <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
             </div>
@@ -145,7 +145,7 @@
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 2</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
               <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
               <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
             </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 3</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
               <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
               <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
             </div>
@@ -167,7 +167,7 @@
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 4</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
               <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
               <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
             </div>
@@ -182,7 +182,7 @@
     <section id="contact" class="pt-32">
       <div class="container lg:px-32">
         <div class="flex justify-start px-4">
-          <h2 class="font-bold uppercase text-primary text-lg mb-5 border-b-2 border-primary pb-1">Contact Me</h2>
+          <h2 class="font-bold uppercase text-primary text-lg lg:text-xl mb-5 border-b-2 border-primary pb-1">Contact Me</h2>
         </div>
         <div
             class="grid gap-8 grid-cols-1 md:grid-cols-2 p-10 lg:p-16 mx-4 bg-dark text-primary rounded-lg drop-shadow-lg">
