--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h4 class="font-semibold text-white text-3xl mb-4 lg:text-3xl lg:pt-10">Get In Touch</h4>
+            <h4 class="font-semibold text-white text-3xl mb-4 lg:text-3xl lg:pt-10">Connect With Me</h4>
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, repellat. Voluptatem eaque maiores sapiente reiciendis.</p>
             <div class="flex items-center text-primary">
               <!-- Instagram -->
@@ -128,51 +128,50 @@
           <h2 class="font-bold uppercase text-primary text-lg lg:text-xl mb-5 border-b-2 border-primary pb-1">Latest Projects</h2>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 px-4 gap-8">
-          <div class="flex flex-wrap bg-white rounded-lg drop-shadow-lg group hover:bg-dark">
-            <div class="lg:w-1/2">
-              <img src="img/project (1).jpg" alt="project 1" class="lg:rounded-l-lg rounded-t-lg lg:rounded-t-none">
+          <div class="flex flex-wrap p-5 bg-white rounded-lg drop-shadow-lg group hover:bg-dark transition duration-300 ease-in-out">
+            <div class="lg:w-1/2 flex items-center">
+              <img src="img/web3.jpg" alt="project 1" class="rounded-md">
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 1</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
-              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
-              <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
+              <h2 class="font-bold text-dark text-3xl mb-1 max-w-md lg:text-lg group-hover:text-white transition duration-300 ease-in-out">RudyKomputer Website</h2>
+              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-5">Created a E-Commerce Website ( Rudy Komputer ) as a final project of Web Design. One of activity learning form my campus subject that given from lecturer in semester 2. In this project I am developed using HTML and Framework CSS Bootstrap.</p>
+              <a href="https://dennykd.github.io/rudykomputer/" target="_blank" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</a>
             </div>
           </div>
-          <div class="flex flex-wrap bg-white rounded-lg drop-shadow-lg group hover:bg-dark">
-            <div class="lg:w-1/2">
-              <img src="img/project (2).jpg" alt="project 1" class="lg:rounded-l-lg rounded-t-lg lg:rounded-t-none">
+          <div class="flex flex-wrap p-5 bg-white rounded-lg drop-shadow-lg group hover:bg-dark transition duration-300 ease-in-out">
+            <div class="lg:w-1/2 flex items-center">
+              <img src="img/web1.jpg" alt="project 1" class="rounded-md">
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 2</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
-              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
-              <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
+              <h2 class="font-bold text-dark text-3xl mb-1 max-w-md lg:text-lg group-hover:text-white transition duration-300 ease-in-out">Infinity Cafe Website</h2>
+              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-5">Created a Cafe Website ( Infinity Cafe ) as a final project of Web Programming 1. One of my activity learning from my campus subject that given from lecturer in semester 3. In this project I am created a website running for Cafe or Restaurant. Once I developed a website using PHP Language and Framework CSS Bootstrap.</p>
+              <a href="https://infinity-cafe.000webhostapp.com/" target="_blank" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</a>
             </div>
           </div>
-          <div class="flex flex-wrap bg-white rounded-lg drop-shadow-lg group hover:bg-dark">
-            <div class="lg:w-1/2">
-              <img src="img/project (3).jpg" alt="project 1" class="lg:rounded-l-lg rounded-t-lg lg:rounded-t-none">
+          <div class="flex flex-wrap p-5 bg-white rounded-lg drop-shadow-lg group hover:bg-dark transition duration-300 ease-in-out">
+            <div class="lg:w-1/2 flex items-center">
+              <img src="img/web4.jpg" alt="project 1" class="rounded-md">
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 3</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
-              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
-              <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
+              <h2 class="font-bold text-dark text-3xl mb-1 max-w-md lg:text-lg group-hover:text-white transition duration-300 ease-in-out">Wedding Invitation Website</h2>
+              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-5"> Created a Wedding Invitation Website. In this project I using HTML, Framework Bootstrap and also using Google Spreadsheet to connected with message form.</p>
+              <a href="https://undanganpernikahan.vercel.app/" target="_blank" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</a>
             </div>
           </div>
-          <div class="flex flex-wrap bg-white rounded-lg drop-shadow-lg group hover:bg-dark">
-            <div class="lg:w-1/2">
-              <img src="img/project (4).jpg" alt="project 1" class="lg:rounded-l-lg rounded-t-lg lg:rounded-t-none">
+          <div class="flex flex-wrap p-5 bg-white rounded-lg drop-shadow-lg group hover:bg-dark transition duration-300 ease-in-out">
+            <div class="lg:w-1/2 flex items-center">
+              <img src="img/web2.jpg" alt="project 1" class="rounded-md">
             </div>
             <div class="lg:w-1/2 p-3">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xs mb-3 ">Project 4</h4>
-              <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-lg group-hover:text-white">Project Title</h2>
-              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
-              <button href="#" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">View Project</button>
+              <h2 class="font-bold text-dark text-3xl mb-1 max-w-md lg:text-lg group-hover:text-white transition duration-300 ease-in-out">AdamJyota Website</h2>
+              <p class="font-medium text-base text-secondary max-w-xl lg:text-sm mb-5"> Created a Property Website ( AdamJyota ). In this project given from company client during creating this website I am belongs with my friend. Meanwhile I am as a Front-End Developer, I am developing user interface to make visitors satisfy and understand with the interface, however this project still hold hand until now.</p>
+              <button href="http://adamjyota.herokuapp.com/" target="_blank" class="text-base lg:text-xs font-semibold text-white bg-primary py-3 px-8 lg:py-2 lg:px-5 rounded-full hover:shadow-lg hover:text-dark transition duration-300 ease-in-out">On Progress</button>
             </div>
           </div>
-          
         </div>
       </div>
     </section>
