--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hello 👋, I am<span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Kadek Denny</span></h1>
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student of <span class="text-dark">Bali State Polytechnic</span></h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, accusamus ipsa fugiat quis repellendus cum animi voluptatem porro! Nam odio maiores voluptas nulla, ea distinctio.
+              I am a student in Bali State Polytechnic majoring in Electrical Engineering with concentration Informatics Management. Who is interested in Front-End Developer and UI/UX Designer. My proven ability are critical thinking, good graphic design, good time management.
             </p>
             <a href="mailto:kadekdenny61@gmail.com" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:bg-dark hover:text-primary transition duration-300 ease-in-out">Hire Me </a>
           </div>
@@ -101,12 +101,11 @@
             <div class="flex">
               <h4 class="font-bold uppercase text-primary text-lg lg:text-xl mb-3 border-b-2 border-primary pb-1 ">About Me</h4>   
             </div>
-            <h2 class="font-bold text-white text-3xl mb-5 max-w-md lg:text-4xl">Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
-            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam totam perspiciatis sed temporibus tempora fuga voluptatem eaque eum esse?</p>
+            
+            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I am a student in Bali State Polytechnic majoring in Electrical Engineering with concentration Informatics Management. Who is interested in Front-End Developer and UI/UX Designer. My proven ability are critical thinking, good graphic design, good time management.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h4 class="font-semibold text-white text-3xl mb-4 lg:text-3xl lg:pt-10">Connect With Me</h4>
-            <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, repellat. Voluptatem eaque maiores sapiente reiciendis.</p>
+            <h4 class="font-semibold text-white text-3xl mb-4 lg:text-3xl lg:pt-4">Connect With Me</h4>
             <div class="flex items-center text-primary">
               <!-- Instagram -->
               <a href="https://www.instagram.com/dennykd_/" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white transition duration-300 ease-in-out"><i class="fa-brands fa-instagram"></i></a>
